--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bgColor">#EDF0F8</color>
+    <color name="top_bar_line_color">#C9C9C9</color>
+    <color name="box_border_color">#D9D9D9</color>
+    <color name="box_border_selected_color">#1A73EB</color>
+    <color name="account_list_regular_text_color">#6C6C6C</color>
 </resources>
